some-changes-in-header-content

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -263,9 +263,6 @@ header {
           }
         }
 
-        .notifications-text {
-          margin-top: 0.5rem;
-        }
       }
 
       .settings {
@@ -285,9 +282,7 @@ header {
           }
         }
 
-        .settings-text {
-          margin-top: 0.5rem;
-        }
+       
       }
 
       .user-log {
@@ -347,7 +342,7 @@ section {
   .product-categories {
     display: flex;
     justify-content: space-around;
-    margin-top: 4%;
+    margin-top: 2%;
 
     >div {
       display: flex;
@@ -366,6 +361,7 @@ section {
 
       >span+span {
         font-size: 20px;
+        color: #333333;
       }
     }
   }
