some-changes-in-header-responsive

--- a/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
+++ b/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
@@ -132,7 +132,8 @@
     section {
 
         .product-categories {
-
+            margin-top: 3%;
+            
             >div {
 
                 >span {
