--- a/src/Responsive/Mobile/Mobile.scss
+++ b/src/Responsive/Mobile/Mobile.scss
@@ -55,6 +55,10 @@
                 bottom: 1rem;
             }
 
+            .slick-next-btn{
+                bottom: 15px;
+            }
+
             .slick-slider {
                 .slick-list {
                     .slick-track {
@@ -62,7 +66,7 @@
                             >div {
                                 >div {
                                     gap: 7px;
-                                    
+
                                     >span+span {
                                         font-size: 13px;
                                     }
