--- a/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
+++ b/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
@@ -5,57 +5,60 @@
     header {
         .uswapp-header {
 
-            .lang-content {
-                flex-basis: 100px;
-                margin-right: 0;
-
-                .change-lang {
-                    margin-right: 5px;
-
-                    svg {
-                        width: 1.5rem;
-                        height: 25px;
+            .lang-and-theme-container{
+                gap: 4rem;
+                
+                .lang-content {
+                    margin-right: 0;
+    
+                    .change-lang {
+                        margin-right: 5px;
+    
+                        svg {
+                            width: 1.5rem;
+                            height: 25px;
+                        }
                     }
                 }
-            }
-
-            .theme-content {
-                margin-bottom: 3px;
-
-                .change-theme {
-                    .theme-label {
-                        width: 55px;
-                        height: 25px;
-                    }
-
-                    .theme-slider:before {
-                        height: 20px;
-                        width: 20px;
-                    }
-
-                    .sun svg {
-                        top: 4px;
-                        left: 32px;
-                        width: 20px;
-                        height: 18px;
-                    }
-
-                    .moon svg {
-                        top: 4px;
-                        left: 3px;
-                        width: 20px;
-                        height: 18px;
-
-                    }
-
-                    .checked-input:checked+.theme-slider:before {
-                        transform: translateX(30px);
+    
+                .theme-content {
+                    margin-bottom: 3px;
+    
+                    .change-theme {
+                        .theme-label {
+                            width: 55px;
+                            height: 25px;
+                        }
+    
+                        .theme-slider:before {
+                            height: 20px;
+                            width: 20px;
+                        }
+    
+                        .sun svg {
+                            top: 4px;
+                            left: 32px;
+                            width: 20px;
+                            height: 18px;
+                        }
+    
+                        .moon svg {
+                            top: 4px;
+                            left: 3px;
+                            width: 20px;
+                            height: 18px;
+    
+                        }
+    
+                        .checked-input:checked+.theme-slider:before {
+                            transform: translateX(30px);
+                        }
                     }
                 }
             }
 
             .user-contents {
-                flex-basis: 400px;
+                flex-basis: 300px;
 
                 .notifications {
 
