--- a/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
+++ b/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
@@ -5,51 +5,51 @@
     header {
         .uswapp-header {
 
-            .lang-and-theme-container{
+            .lang-and-theme-container {
                 gap: 4rem;
-                
+
                 .lang-content {
                     margin-right: 0;
-    
+
                     .change-lang {
                         margin-right: 5px;
-    
+
                         svg {
                             width: 1.5rem;
                             height: 25px;
                         }
                     }
                 }
-    
+
                 .theme-content {
                     margin-bottom: 3px;
-    
+
                     .change-theme {
                         .theme-label {
                             width: 55px;
                             height: 25px;
                         }
-    
+
                         .theme-slider:before {
                             height: 20px;
                             width: 20px;
                         }
-    
+
                         .sun svg {
                             top: 4px;
                             left: 32px;
                             width: 20px;
                             height: 18px;
                         }
-    
+
                         .moon svg {
                             top: 4px;
                             left: 3px;
                             width: 20px;
                             height: 18px;
-    
+
                         }
-    
+
                         .checked-input:checked+.theme-slider:before {
                             transform: translateX(30px);
                         }
@@ -136,7 +136,7 @@
 
         .product-categories {
             margin-top: 3%;
-            
+
             >div {
 
                 >span {
@@ -150,6 +150,146 @@
                 >span+span {
                     font-size: 18px;
                     font-weight: 600;
+                }
+            }
+        }
+    }
+
+    section {
+        .products-container {
+            margin-top: 4rem;
+
+            .product-categories-title {
+                margin-left: 28px;
+            }
+
+            .slider-container {
+
+                .slick-prev-btn {
+                    font-size: 28px;
+                }
+
+                .slick-next-btn {
+                    font-size: 28px;
+                    right: 0;
+                }
+
+                .slick-slider {
+                    .slick-list {
+                        .slick-track {
+                            >div {
+                                >div {
+                                    .product-container {
+                                        div {
+                                            svg {
+                                                width: 200px;
+                                                height: 200px;
+                                            }
+                                        }
+
+                                        h3 {
+                                            font-size: 22px;
+                                        }
+
+                                        p {
+                                            font-size: 19px;
+                                        }
+
+                                        button {
+                                            height: 36px;
+                                        }
+
+                                        &:first-child {
+                                            margin-left: 44px;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+            }
+        }
+    }
+
+    footer {
+        .uswapp-footer {
+            padding: 80px;
+
+            .uswapp-about-us {
+                margin-right: 6%;
+
+                &-title {
+                    gap: 0;
+                }
+            }
+
+            .uswapp-contact-us {
+                margin-right: 6%;
+
+                &-title {
+                    gap: 5px;
+                }
+
+                .contact-btns {
+                    gap: 1.5rem;
+                }
+            }
+
+            .uswapp-live-support {
+                &-title {
+                    width: max-content;
+                    gap: 10px;
+                }
+            }
+
+            .uswapp-social-media {
+                margin-right: 6%;
+                margin-left: 6%;
+
+                h4 {
+                    margin-bottom: 35px;
+                }
+
+                &-icons {
+
+                    a {
+                        margin-left: 1rem;
+                        width: 27px;
+                        height: 27px;
+
+                        svg {
+                            width: 17px;
+                            height: 17px;
+                        }
+
+                        &:first-child {
+                            margin-left: 0;
+                        }
+                    }
+                }
+            }
+
+            .uswapp-mobile-apps {
+
+                &-title {
+                    width: max-content;
+                    gap: 7px;
+                }
+
+                img {
+                    margin-bottom: 1rem;
+                }
+            }
+
+            .uswapp-help {
+                margin-top: 8px;
+                margin-left: 6%;
+
+                p {
+                    margin-bottom: 20px;
+                    line-height: 18px;
                 }
             }
         }
