--- a/src/Responsive/Tablet-Large Tablet/Tablet.scss
+++ b/src/Responsive/Tablet-Large Tablet/Tablet.scss
@@ -201,4 +201,197 @@
             }
         }
     }
+
+    section {
+        .products-container {
+            margin-top: 3.5rem;
+
+            .product-categories-title {
+                margin-left: 1.5rem;
+                font-size: 26px;
+            }
+
+            .slider-container {
+                .slick-prev-btn {
+                    left: 5px;
+                    font-size: 25px;
+                }
+
+                .slick-next-btn {
+                    right: 6px;
+                    font-size: 25px;
+                }
+
+                .slick-slider {
+                    .slick-list {
+                        .slick-track {
+                            >div {
+                                >div {
+                                    .product-container {
+                                        h3 {
+                                            font-size: 19px;
+                                        }
+
+                                        p {
+                                            font-size: 1rem;
+                                        }
+
+                                        button {
+                                            font-size: 13px;
+
+                                            svg {
+                                                width: 11px;
+                                                height: 11px;
+
+                                            }
+                                        }
+
+                                        &:first-child {
+                                            margin-left: 50px;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+            }
+        }
+    }
+
+    section {
+        .info-container {
+            margin: 12% 7% 12% 7%;
+
+            .short-info-about-project {
+                font-size: 20px;
+                padding-top: 35px;
+                padding-bottom: 12px;
+            }
+
+            .short-info-about-aim {
+                font-size: 20px;
+                padding-top: 26px;
+                padding-bottom: 26px;
+            }
+        }
+    }
+
+    footer {
+        .uswapp-footer {
+            padding: 40px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+
+            .uswapp-about-us {
+                margin-left: 10%;
+                margin-right: 10%;
+
+            }
+
+            .uswapp-contact-us {
+                width: max-content;
+                padding-bottom: 5%;
+
+                &-title {
+                    gap: 6px;
+
+                    span {
+                        margin-top: 35%;
+                    }
+                }
+
+                .contact-btns {
+
+                    .wp-contact-btn {
+                        font-size: 15px;
+
+                        a {
+                            svg {
+                                width: 1.5rem;
+                                height: 1.5rem;
+                            }
+                        }
+                    }
+
+                    .dc-contact-btn {
+                        font-size: 15px;
+
+                        a {
+                            svg {
+                                width: 1.5rem;
+                                height: 1.5rem;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .uswapp-live-support {
+
+                &-title {
+                    gap: 7px;
+
+                    span {
+                        svg {
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+                }
+            }
+
+            .uswapp-social-media {
+
+                h4 {
+                    margin-bottom: 25px;
+                }
+            }
+
+            .uswapp-mobile-apps {
+
+                &-title {
+                    gap: 8px;
+
+                    span {
+                        svg {
+                            width: 18px;
+                            height: 18px;
+                        }
+                    }
+                }
+
+                .app-store {
+                    width: 120px;
+                }
+
+                .google-play-store {
+                    width: 120px;
+                }
+
+                .app-gallery-huawei {
+                    width: 120px;
+                }
+            }
+
+            .uswapp-help {
+                margin-left: 10%;
+            }
+        }
+
+        .uswapp-privacy {
+            padding-top: 8px;
+            height: 55px;
+
+            .all-rights {
+                font-size: 14px;
+            }
+
+            .privacy-policy {
+                margin-top: 8px;
+                font-size: 14px;
+            }
+        }
+    }
 }
