--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -357,34 +357,41 @@ section {
       gap: 12px;
       cursor: pointer;
 
-      &:first-child{
+      &:first-child {
         color: rgb(240, 187, 196);
       }
-      &:nth-child(2){
+
+      &:nth-child(2) {
         color: #004AAC;
       }
-      &:nth-child(3){
+
+      &:nth-child(3) {
         color: purple;
       }
-      &:nth-child(4){
+
+      &:nth-child(4) {
         color: rgb(212, 184, 131);
       }
-      &:nth-child(5){
+
+      &:nth-child(5) {
         color: #3386EF;
       }
-      &:nth-child(6){
+
+      &:nth-child(6) {
         color: darkred;
       }
-      &:nth-child(7){
+
+      &:nth-child(7) {
         color: #009087;
       }
-      &:nth-child(8){
+
+      &:nth-child(8) {
         color: darkgreen;
       }
-      
+
       >span {
         text-align: center;
-          
+
         svg {
           width: 2rem;
           height: 2rem;
@@ -420,8 +427,7 @@ section {
         left: 4px;
         top: 35%;
         border: none;
-        background-color: $base-color1;
-        border-radius: 50%;
+        background: none;
         cursor: pointer;
         color: $color1;
         z-index: 1111;
@@ -433,8 +439,7 @@ section {
         top: 35%;
         right: 10px;
         border: none;
-        background-color: $base-color1;
-        border-radius: 50%;
+        background: none;
         cursor: pointer;
         color: $color1;
       }
@@ -449,7 +454,6 @@ section {
                   height: fit-content;
                   border: 2px solid #000;
                   border-radius: 5px;
-                  margin-left: 2.5rem;
 
                   div {
                     display: flex;
@@ -654,13 +658,14 @@ footer {
         color: $color1;
       }
 
-      h4 {
-        font-size: 18px;
-        font-weight: 700;
-        margin-bottom: 1rem;
+      &-title {
+        display: flex;
+        gap: 12px;
 
-        span {
-          margin-left: 10px;
+        h4 {
+          font-size: 18px;
+          font-weight: 700;
+          margin-bottom: 1rem;
         }
       }
 
@@ -681,14 +686,21 @@ footer {
     .uswapp-contact-us {
       margin-right: 5%;
 
-      h4 {
-        font-size: 18px;
-        font-weight: 700;
-        margin-bottom: 30px;
-        margin-top: 80px;
+      &-title {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+
+        h4 {
+          font-size: 18px;
+          font-weight: 700;
+          margin-bottom: 30px;
+          margin-top: 80px;
+        }
 
         span {
-          margin-left: 10px;
+          margin-top: 32%;
+          margin-left: 5px;
 
           svg {
             width: 20px;
@@ -871,13 +883,18 @@ footer {
     }
 
     .uswapp-live-support {
-      h4 {
-        font-size: 18px;
-        font-weight: 700;
-        margin-bottom: 5rem;
+
+      &-title {
+        display: flex;
+        gap: 12px;
+
+        h4 {
+          font-size: 18px;
+          font-weight: 700;
+          margin-bottom: 5rem;
+        }
 
         span {
-          margin-left: 10px;
 
           svg {
             width: 23px;
@@ -897,59 +914,70 @@ footer {
         margin-bottom: 43px;
       }
 
-      a {
-        background-color: $base-color1;
-        border-radius: 50%;
-        margin-left: 1.5rem;
-        display: inline-block;
-        width: 30px;
-        height: 30px;
-        color: #231F20;
+      &-icons {
+        display: flex;
 
-        svg {
-          width: 20px;
-          height: 20px;
-          margin-left: 5px;
-          margin-top: 5px;
-        }
+        a {
+          background-color: $base-color1;
+          border-radius: 50%;
+          margin-left: 1.5rem;
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          color: #231F20;
 
-        &:nth-child(2) {
-          margin-left: 12px;
-
-          &:hover {
-            background-color: #3658A1;
+          svg {
+            width: 20px;
+            height: 20px;
+            margin-left: 5px;
+            margin-top: 5px;
           }
-        }
 
-        &:nth-child(3) {
-          &:hover {
-            background-color: #BA2255;
+          &:first-child {
+            margin-left: 1rem;
+
+            &:hover {
+              background-color: #3658A1;
+            }
           }
-        }
 
-        &:nth-child(4) {
-          &:hover {
-            background-color: #508AD4;
+          &:nth-child(2) {
+            &:hover {
+              background-color: #BA2255;
+            }
           }
-        }
 
-        &:last-child {
-          &:hover {
-            background-color: #E22231;
+          &:nth-child(3) {
+            &:hover {
+              background-color: #508AD4;
+            }
+          }
+
+          &:last-child {
+            &:hover {
+              background-color: #E22231;
+            }
           }
         }
       }
     }
 
     .uswapp-mobile-apps {
-      h4 {
-        font-size: 18px;
-        font-weight: 700;
-        margin-top: 50px;
-        margin-bottom: 20px;
+
+      &-title {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        h4 {
+          font-size: 18px;
+          font-weight: 700;
+          margin-top: 50px;
+          margin-bottom: 20px;
+        }
 
         span {
-          margin-left: 10px;
+          margin-top: 20%;
 
           svg {
             width: 20px;
@@ -979,7 +1007,7 @@ footer {
       }
 
       .app-gallery-huawei {
-        width: 130px;
+        width: 135px;
         height: 40px;
       }
     }
@@ -990,7 +1018,7 @@ footer {
       h4 {
         font-size: 18px;
         font-weight: 700;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
 
       }
 
