--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1074,3 +1074,272 @@ footer {
     }
   }
 }
+
+.login-and-signup-container {
+  color: #b1b1b1;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+
+  .swap-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  .entries-project-logo {
+    position: absolute;
+    top: 25%;
+    left: 20%;
+
+    img {
+      width: 300px;
+      height: 350px;
+    }
+  }
+
+  .entries-container {
+    position: absolute;
+    left: 70%;
+    top: 30%;
+    max-width: 525px;
+    min-height: 500px;
+
+    .login-container {
+      .login {
+        display: none;
+
+        &:checked+.tab {
+          color: $base-color1;
+          border-color: #1161ee;
+        }
+
+        &:checked+.tab+.signup+.tab+.login-form {
+          transform: rotate(0);
+        }
+      }
+
+      .signup {
+        display: none;
+
+        &:checked+.tab {
+          color: $base-color1;
+          border-color: #1161ee;
+        }
+
+        &:checked+.tab+.login-form+.login-container+.signup-container {
+          .signup-form {
+            transform: translate(0);
+          }
+        }
+      }
+
+      .tab {
+        font-size: 22px;
+        margin-right: 15px;
+        padding-bottom: 5px;
+        margin: 0 15px 10px 0;
+        display: inline-block;
+        border-bottom: 2px solid transparent;
+        text-transform: uppercase;
+      }
+    }
+
+    .login-form {
+      perspective: 1000px;
+      transform-style: preserve-3d;
+      position: relative;
+      min-height: 345px;
+
+      .group {
+        margin-bottom: 15px;
+
+        .keep-login {
+          display: none;
+
+          &:checked+label {
+            color: $base-color1;
+
+            .check-icon {
+              background: #1161ee;
+
+              &::before {
+                transform: scale(1) rotate(45deg);
+              }
+
+              &::after {
+                transform: scale(1) rotate(-45deg);
+              }
+            }
+          }
+        }
+
+        .keep-login-confirmator {
+          cursor: pointer;
+        }
+
+        label {
+          .check-icon {
+            width: 15px;
+            height: 15px;
+            border-radius: 2px;
+            position: relative;
+            display: inline-block;
+            background: rgba(255, 255, 255, .1);
+            top: 1px;
+            margin-right: 0.5rem;
+
+            &::before {
+              content: '';
+              width: 5px;
+              height: 2px;
+              background: $base-color1;
+              position: absolute;
+              transition: all .2s ease-in-out 0s;
+              left: 3px;
+              bottom: 6px;
+              transform: scale(0) rotate(0);
+            }
+
+            &::after {
+              content: '';
+              width: 10px;
+              height: 2px;
+              background: $base-color1;
+              position: absolute;
+              transition: all .2s ease-in-out 0s;
+              top: 6px;
+              right: 0;
+              transform: scale(0) rotate(0);
+            }
+          }
+        }
+
+        .user {
+          width: 100%;
+          display: block;
+          text-transform: uppercase;
+          margin-top: 0.5rem;
+          margin-bottom: 0.5rem;
+        }
+
+        .password {
+          display: block;
+          text-transform: uppercase;
+          margin-bottom: 0.5rem;
+        }
+
+        .input-log-sign {
+          width: 100%;
+          display: block;
+          color: $base-color1;
+          border: none;
+          padding: 15px 20px;
+          border-radius: 25px;
+          background: rgba(255, 255, 255, .2);
+        }
+      }
+
+      .login-btn {
+        width: 100%;
+        padding: 15px 20px;
+        border-radius: 25px;
+        display: block;
+        color: $base-color1;
+        background: #1161ee;
+        cursor: pointer;
+        border: none;
+        font-size: 20px;
+        margin-top: 2rem;
+        margin-left: 1rem;
+      }
+
+      .forgot-password {
+        margin-top: 2rem;
+        margin-left: 2.5rem;
+        text-align: center;
+
+        a {
+          color: #c9c9cc;
+        }
+      }
+    }
+
+    .signup-container {
+      .signup-form {
+        .group {
+          margin-bottom: 15px;
+          .user {
+            width: 100%;
+            display: block;
+            text-transform: uppercase;
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+          }
+
+          .password {
+            display: block;
+            text-transform: uppercase;
+            margin-top: 1rem;
+            margin-bottom: 0.5rem;
+          }
+
+          .repeat-password {
+            display: block;
+            text-transform: uppercase;
+            margin-top: 1rem;
+            margin-bottom: 0.5rem;
+          }
+
+          .email {
+            display: block;
+            text-transform: uppercase;
+            margin-top: 1rem;
+            margin-bottom: 0.5rem;
+          }
+
+          .input-log-sign {
+            width: 100%;
+            display: block;
+            color: $base-color1;
+            border: none;
+            padding: 15px 20px;
+            border-radius: 25px;
+            background: rgba(255, 255, 255, .2);
+          }
+        }
+
+        .signup-btn {
+          width: 100%;
+          padding: 15px 20px;
+          border-radius: 25px;
+          display: block;
+          color: $base-color1;
+          background: #1161ee;
+          cursor: pointer;
+          border: none;
+          font-size: 20px;
+          margin-top: 2rem;
+          margin-left: 1rem;
+        }
+
+        .already-member {
+          text-align: center;
+          margin-top: 2rem;
+          margin-left: 2.5rem;
+
+          a {
+            color: #c9c9cc;
+          }
+        }
+      }
+    }
+
+    .hr {
+      display: block;
+      margin: 40px 0 30px 1.5rem;
+      height: 2px;
+      background: rgba(255, 255, 255, .2);
+    }
+  }
+}
